--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,40 @@
 #header-image{
-    width: 1000px;
+    width: 100%;
     height: 400px;
+    
+}
+
+body{
+    background-color: rgb(221, 217, 217);
+}
+
+header{
+    text-align: center;
+}
+
+section{
+    text-align: center;
+    margin-top: 40px;
+}
+
+main p {
+    text-align: center;
+}
+
+nav{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px auto;
+    
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    
+}
+
+nav a:hover{
+    background-color: blue;
     
 }
