--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,39 @@
-body{
+section{
     text-align: center;
+}
+
+
+input[type="text"], select, textarea{
+    width: 100%;
+    padding: 12px;
+    border-radius: 1%;
+    border: 1px solid #ccc;
+    margin-bottom: 16px;
+    margin-top: 6px;
+}
+
+.container{
+   margin: auto;
+   width: 60%;
+   background-color: grey;
+
+}
+
+#email{
+    width: 100%;
+    padding: 12px;
+    border-radius: 1%;
+    border: 1px solid #ccc;
+    margin-bottom: 16px;
+    margin-top: 6px;
+}
+
+#country{
+    width: 100%;
+    padding: 12px;
+    border-radius: 1%;
+    border: 1px solid #ccc;
+    margin-bottom: 16px;
+    margin-top: 6px;
+
 }
